syntax = "proto3";

import "OperationResponse.proto";
import "MessageRequest.proto";

option csharp_namespace = "Generated";

service MessageReply {
	rpc SayHello (MessageRequest) returns (OperationResponse);
}