syntax = "proto3";

option csharp_namespace = "Generated";

message MessageRequest
{
    string name = 1;
}