syntax = "proto3";

option csharp_namespace = "Server.Protos";

message OperationResponse
{
	string message = 1;
}